tests/programs/a1/local/valid/FileNameExample.java
// File: FileNameExample.java
public class FileNameExample {
    // Class implementation
    public FileNameExample() {
        
    }
}
