tests/programs/a1/local/invalid/DifferentName.java
// File: DifferentName.java
public class InvalidFileName {
    // Invalid file name for the class
}
